--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,17 +24,23 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0" colspan="2">
-      <widget class="QSlider" name="brightnessSlider">
+     <item row="0" column="1">
+      <widget class="QSpinBox" name="brightnessValue"/>
+     </item>
+     <item row="1" column="2" colspan="2">
+      <widget class="QSlider" name="contrastSlider">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Contrast:</string>
+     <item row="0" column="3">
+      <widget class="QSpinBox" name="contrastValue"/>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QSlider" name="brightnessSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -45,18 +51,26 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="2" colspan="2">
-      <widget class="QSlider" name="contrastSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Contrast:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QSpinBox" name="brightnessValue"/>
+     <item row="2" column="0" colspan="2">
+      <widget class="QCheckBox" name="hFlipBox">
+       <property name="text">
+        <string>Flip Horizontal</string>
+       </property>
+      </widget>
      </item>
-     <item row="0" column="3">
-      <widget class="QSpinBox" name="contrastValue"/>
+     <item row="2" column="2" colspan="2">
+      <widget class="QCheckBox" name="vFlipBox">
+       <property name="text">
+        <string>Flip Vertical</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
