--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,56 +19,83 @@
      <rect>
       <x>80</x>
       <y>60</y>
-      <width>291</width>
-      <height>101</height>
+      <width>441</width>
+      <height>121</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1">
-      <widget class="QSpinBox" name="brightnessValue"/>
-     </item>
-     <item row="1" column="2" colspan="2">
-      <widget class="QSlider" name="contrastSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Resolution:</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
+     <item row="1" column="3">
       <widget class="QSpinBox" name="contrastValue"/>
      </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QSlider" name="brightnessSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="0" column="3">
+      <widget class="QComboBox" name="resolutionSelector"/>
+     </item>
+     <item row="3" column="2" colspan="2">
+      <widget class="QCheckBox" name="vFlipBox">
+       <property name="text">
+        <string>Flip Vertical</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
+     <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Brightness: </string>
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_2">
+     <item row="2" column="2" colspan="2">
+      <widget class="QSlider" name="contrastSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="brightnessValue"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Contrast:</string>
+        <string>Index of your camera:</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0" colspan="2">
+      <widget class="QSlider" name="brightnessSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0" colspan="2">
       <widget class="QCheckBox" name="hFlipBox">
        <property name="text">
         <string>Flip Horizontal</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2" colspan="2">
-      <widget class="QCheckBox" name="vFlipBox">
+     <item row="0" column="1">
+      <widget class="QSpinBox" name="cameraIndexBox"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Flip Vertical</string>
+        <string>Contrast:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QPushButton" name="connectButton">
+       <property name="text">
+        <string>Connect Camera</string>
        </property>
       </widget>
      </item>
