--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
       <x>80</x>
       <y>60</y>
       <width>441</width>
-      <height>121</height>
+      <height>130</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -31,35 +31,22 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
-      <widget class="QSpinBox" name="contrastValue"/>
-     </item>
-     <item row="0" column="3">
-      <widget class="QComboBox" name="resolutionSelector"/>
-     </item>
      <item row="3" column="2" colspan="2">
-      <widget class="QCheckBox" name="vFlipBox">
-       <property name="text">
-        <string>Flip Vertical</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Brightness: </string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2" colspan="2">
       <widget class="QSlider" name="contrastSlider">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="2" column="1">
       <widget class="QSpinBox" name="brightnessValue"/>
+     </item>
+     <item row="3" column="0" colspan="2">
+      <widget class="QSlider" name="brightnessSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
@@ -68,27 +55,40 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="2">
-      <widget class="QSlider" name="brightnessSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Brightness: </string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0" colspan="2">
+     <item row="2" column="3">
+      <widget class="QSpinBox" name="contrastValue"/>
+     </item>
+     <item row="4" column="0" colspan="2">
       <widget class="QCheckBox" name="hFlipBox">
        <property name="text">
         <string>Flip Horizontal</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QSpinBox" name="cameraIndexBox"/>
-     </item>
-     <item row="1" column="2">
+     <item row="2" column="2">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Contrast:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QSpinBox" name="cameraIndexBox"/>
+     </item>
+     <item row="0" column="3">
+      <widget class="QComboBox" name="resolutionSelector"/>
+     </item>
+     <item row="4" column="2" colspan="2">
+      <widget class="QCheckBox" name="vFlipBox">
+       <property name="text">
+        <string>Flip Vertical</string>
        </property>
       </widget>
      </item>
@@ -96,6 +96,13 @@
       <widget class="QPushButton" name="connectButton">
        <property name="text">
         <string>Connect Camera</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="5">
+      <widget class="QLabel" name="virtualCameraLabel">
+       <property name="text">
+        <string>TextLabel</string>
        </property>
       </widget>
      </item>
