--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,43 +20,10 @@
       <x>80</x>
       <y>60</y>
       <width>481</width>
-      <height>187</height>
+      <height>217</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="2">
-      <widget class="QSpinBox" name="cameraIndexBox"/>
-     </item>
-     <item row="4" column="1" colspan="2">
-      <widget class="QCheckBox" name="hFlipBox">
-       <property name="text">
-        <string>Flip Horizontal</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="QComboBox" name="resolutionSelector"/>
-     </item>
-     <item row="4" column="3" colspan="2">
-      <widget class="QCheckBox" name="vFlipBox">
-       <property name="text">
-        <string>Flip Vertical</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QSpinBox" name="brightnessValue"/>
-     </item>
-     <item row="2" column="4">
-      <widget class="QSpinBox" name="contrastValue"/>
-     </item>
-     <item row="1" column="1" colspan="5">
-      <widget class="QLabel" name="virtualCameraLabel">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="3">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -64,12 +31,8 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>AR filters:</string>
-       </property>
-      </widget>
+     <item row="2" column="2">
+      <widget class="QSpinBox" name="brightnessValue"/>
      </item>
      <item row="0" column="3">
       <widget class="QLabel" name="label_4">
@@ -85,10 +48,58 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Index of your camera:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QSpinBox" name="cameraIndexBox"/>
+     </item>
+     <item row="3" column="3" colspan="2">
+      <widget class="QSlider" name="contrastSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1" colspan="2">
+      <widget class="QCheckBox" name="hFlipBox">
+       <property name="text">
+        <string>Flip Horizontal</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="4">
+      <widget class="QSpinBox" name="contrastValue"/>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <widget class="QSlider" name="brightnessSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" colspan="5">
+      <widget class="QLabel" name="virtualCameraLabel">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Brightness: </string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Background blur intensity:</string>
        </property>
       </widget>
      </item>
@@ -99,31 +110,30 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QSlider" name="brightnessSlider">
+     <item row="6" column="1">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>AR filters:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="3" colspan="2">
+      <widget class="QCheckBox" name="vFlipBox">
+       <property name="text">
+        <string>Flip Vertical</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QComboBox" name="resolutionSelector"/>
+     </item>
+     <item row="7" column="2">
+      <widget class="QSpinBox" name="bgBlurValue"/>
+     </item>
+     <item row="8" column="1" colspan="2">
+      <widget class="QSlider" name="bgBlurSlider">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Index of your camera:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3" colspan="2">
-      <widget class="QSlider" name="contrastSlider">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QCheckBox" name="blurBackgroundCheckBox">
-       <property name="text">
-        <string>Blur background</string>
        </property>
       </widget>
      </item>
