--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,8 +19,8 @@
      <rect>
       <x>80</x>
       <y>60</y>
-      <width>481</width>
-      <height>217</height>
+      <width>534</width>
+      <height>221</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -96,13 +96,6 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Background blur intensity:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="5">
       <widget class="QPushButton" name="connectButton">
        <property name="text">
@@ -127,13 +120,41 @@
      <item row="0" column="4">
       <widget class="QComboBox" name="resolutionSelector"/>
      </item>
-     <item row="7" column="2">
+     <item row="7" column="4">
       <widget class="QSpinBox" name="bgBlurValue"/>
      </item>
-     <item row="8" column="1" colspan="2">
+     <item row="8" column="3" colspan="2">
       <widget class="QSlider" name="bgBlurSlider">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Custom Background:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QPushButton" name="chooseBgButton">
+       <property name="text">
+        <string>Choose image</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="3">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Background blur intensity:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
+      <widget class="QPushButton" name="resetBgButton">
+       <property name="text">
+        <string>Reset</string>
        </property>
       </widget>
      </item>
